test/errors/function/container_of_refs_invalid_args.np
def fn1() -> int:
    return 1


def fn2() -> int:
    return 2


l = [fn1, fn2]
l[0](1)
